--- a/Baekjoon/Array.ipynb
+++ b/Baekjoon/Array.ipynb
@@ -232,26 +232,21 @@
    ],
    "source": [
     "#4344\n",
-    "test_num = int(input())\n",
+    "test_num = int(input()) #테스트케이스 개수\n",
     "\n",
     "for i in range(test_num):\n",
     "    score = list(map(int, input().split()))\n",
-    "    std_num = score[0]\n",
+    "    std_num = score[0] #첫 수는 학생의 수이므로 저장 후 삭제\n",
     "    del score[0]\n",
-    "    avg = sum(score) / std_num\n",
-    "    count = 0\n",
+    "    \n",
+    "    avg = sum(score) / std_num #평균\n",
+    "    count = 0 #평균을 넘는 학생 수\n",
+    "    \n",
     "    for j in range(std_num):\n",
     "        if score[j] > avg:\n",
     "            count += 1\n",
     "    print(\"{:.3f}%\".format(count / std_num * 100))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
