--- a/Baekjoon/String.ipynb
+++ b/Baekjoon/String.ipynb
@@ -2,49 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "12345\n",
-      "15\n"
+      "A\n",
+      "65\n"
      ]
     }
    ],
    "source": [
     "#11654\n",
     "a = input()\n",
-    "b = input()\n",
-    "c = 0\n",
-    "for i in b:\n",
-    "    c += int(i)\n",
-    "    \n",
-    "print(c)"
+    "print(ord(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z\n",
-      "25\n"
+      "11\n",
+      "10987654321\n",
+      "46\n"
      ]
     }
    ],
    "source": [
     "#11720\n",
     "a = input()\n",
-    "a = ord(a) - 97\n",
-    "print(a)"
+    "b = input()\n",
+    "c = 0\n",
+    "\n",
+    "for i in b:\n",
+    "    c += int(i)\n",
+    "    \n",
+    "print(c)"
    ]
   },
   {
@@ -110,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z\n",
-      "Z\n"
+      "Mississipi\n",
+      "?\n"
      ]
     }
    ],
@@ -141,15 +141,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " a b c \n",
-      "3\n"
+      "The Curious Case of Benjamin Button\n",
+      "6\n"
      ]
     }
    ],
@@ -166,13 +166,6 @@
     "    \n",
     "print(ans)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
