--- a/Baekjoon/String.ipynb
+++ b/Baekjoon/String.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +165,120 @@
     "    ans -= 1\n",
     "    \n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "734 893\n",
+      "437\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2908\n",
+    "num1, num2 = input().split()\n",
+    "num1 = int(num1[::-1])\n",
+    "num2 = int(num2[::-1])\n",
+    "\n",
+    "if num1 > num2:\n",
+    "    print(num1)\n",
+    "else:\n",
+    "    print(num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UNUCIC\n",
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5622\n",
+    "dial = ['ABC', 'DEF', 'GHI', 'JKL', 'MNO', 'PQRS', 'TUV', 'WXYZ']\n",
+    "num = input()\n",
+    "time = 0\n",
+    "\n",
+    "for i in num:\n",
+    "    for j in dial:\n",
+    "        if i in j:\n",
+    "            time += (dial.index(j)) +3\n",
+    "\n",
+    "print(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ljes=njak\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2941\n",
+    "cro = ['c=', 'c-', 'dz=', 'd-', 'lj', 'nj', 's=', 'z=']\n",
+    "str = input()\n",
+    "\n",
+    "for i in range(len(cro)):\n",
+    "    str = str.replace(cro[i], \"a\") #크로아티아 알파벳을 임의의 문자 1개로 치환\n",
+    "    \n",
+    "print(len(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "happy\n",
+      "new\n",
+      "year\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1316\n",
+    "word_count = int(input())\n",
+    "group_word = 0\n",
+    "\n",
+    "for i in range(word_count):\n",
+    "    word = input()\n",
+    "    \n",
+    "    for j in range(len(word) - 1):\n",
+    "        if word[j] != word[j + 1]: #연속되는 두 문자가 다를 경우\n",
+    "            if word[j] in word[j + 1:]: #이전 문자가 다음 문자 뒤에 다시 등장하면 그룹 문자가 아님\n",
+    "                break\n",
+    "    else:\n",
+    "        group_word += 1\n",
+    "\n",
+    "print(group_word)"
    ]
   }
  ],
