--- a/Baekjoon/Math1.ipynb
+++ b/Baekjoon/Math1.ipynb
@@ -129,6 +129,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "6 12 10\n",
+      "402\n",
+      "30 50 72\n",
+      "1203\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10250\n",
+    "t = int(input())\n",
+    "\n",
+    "for i in range(t):\n",
+    "    h, w, n = map(int, input().split())\n",
+    "    \n",
+    "    if(n % h == 0 ): #사람 수가 층 수로 나누어질 때\n",
+    "        floor = h #층수\n",
+    "        num = n // h #호수\n",
+    "    else:\n",
+    "        floor = n % h\n",
+    "        num = n // h + 1\n",
+    "    \n",
+    "    room_num = floor * 100 + num #방 호수\n",
+    "    print(room_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
