--- a/Baekjoon/DFS_BFS.ipynb
+++ b/Baekjoon/DFS_BFS.ipynb
@@ -201,6 +201,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "10 8 17\n",
+      "0 0\n",
+      "1 0\n",
+      "1 1\n",
+      "4 2\n",
+      "4 3\n",
+      "4 5\n",
+      "2 4\n",
+      "3 4\n",
+      "7 4\n",
+      "8 4\n",
+      "9 4\n",
+      "7 5\n",
+      "8 5\n",
+      "9 5\n",
+      "7 6\n",
+      "8 6\n",
+      "9 6\n",
+      "10 10 1\n",
+      "5 5\n",
+      "--------------\n",
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1012\n",
+    "from collections import deque\n",
+    "\n",
+    "test_case_num = int(input()) #테스트케이스 수\n",
+    "answer = []\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "def solution():\n",
+    "    #그래프 생성\n",
+    "    m, n, k = map(int, input().split())\n",
+    "    \n",
+    "    graph = [[0] * n for _ in range(m)]\n",
+    "    result = 0\n",
+    "    \n",
+    "    for i in range(k):\n",
+    "        x, y = map(int, input().split())\n",
+    "        graph[x][y] = 1\n",
+    "    \n",
+    "    #BFS\n",
+    "    def bfs(x, y):\n",
+    "        queue = deque()\n",
+    "        queue.append((x, y))\n",
+    "        \n",
+    "        while queue:\n",
+    "            xpos, ypos = queue.popleft()\n",
+    "            \n",
+    "            for i in range(4):\n",
+    "                nx = xpos + dx[i]\n",
+    "                ny = ypos + dy[i]\n",
+    "                \n",
+    "                if 0 <= nx < m and 0 <= ny < n:\n",
+    "                    if graph[nx][ny] == 1:\n",
+    "                        queue.append((nx, ny))\n",
+    "                        graph[nx][ny] = 0\n",
+    "\n",
+    "    for i in range(m):\n",
+    "        for j in range(n):\n",
+    "            if graph[i][j] == 1:\n",
+    "                bfs(i, j)\n",
+    "                result += 1\n",
+    "    \n",
+    "    answer.append(result)\n",
+    "\n",
+    "for i in range(test_case_num):\n",
+    "    solution()\n",
+    "\n",
+    "print(\"--------------\")\n",
+    "for i in answer:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 7\n",
+      "1011111\n",
+      "1110001\n",
+      "1000001\n",
+      "1000001\n",
+      "1000001\n",
+      "1000001\n",
+      "1111111\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2178\n",
+    "from collections import deque\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "graph = []\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int, input())))\n",
+    "\n",
+    "def bfs(x, y):\n",
+    "    queue = deque()\n",
+    "    queue.append((x, y))\n",
+    "    \n",
+    "    while queue:\n",
+    "        xpos, ypos = queue.popleft()\n",
+    "        \n",
+    "        for i in range(4):\n",
+    "            nx = xpos + dx[i]\n",
+    "            ny = ypos + dy[i]\n",
+    "                \n",
+    "            if nx < 0 or nx >= n or ny < 0 or ny >= m:\n",
+    "                continue\n",
+    "            \n",
+    "            if graph[nx][ny] == 0:\n",
+    "                continue\n",
+    "            \n",
+    "            if graph[nx][ny] == 1:\n",
+    "                graph[nx][ny] = graph[xpos][ypos] + 1\n",
+    "                queue.append((nx, ny))\n",
+    "                \n",
+    "    print(graph[n - 1][m - 1])\n",
+    "\n",
+    "bfs(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -212,6 +360,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
