Update issue templates

--- a/.github/ISSUE_TEMPLATE/프로그래머스-문제.md
+++ b/.github/ISSUE_TEMPLATE/프로그래머스-문제.md
@@ -1,7 +1,7 @@
 ---
 name: 프로그래머스 문제
 about: 프로그래머스 코딩테스트 문제 풀이를 위한 템플릿입니다.
-title: "[프로그래머스] 번호: 제목"
+title: "[프로그래머스] 제목"
 labels: ''
 assignees: ''
 
